--- a/src/TechJobs/Views/List/Jobs.cshtml
+++ b/src/TechJobs/Views/List/Jobs.cshtml
@@ -1,7 +1,22 @@
-﻿<h1>@ViewBag.title</h1>
+﻿
 
 <h3>@ViewBag.jobs.Count Result(s)</h3>
 
-@{ 
-    // TODO #3 - Use the same list display from Views/Search/Index.cshtml 
+<h1>@ViewBag.Title</h1>
+<h2>View All</h2>
+
+@foreach (Dictionary<string, string> job in ViewBag.jobs)
+{
+    <table class="job-listing">
+        @foreach (KeyValuePair<string, string> row in job)
+                {
+            <tr><td>@row.Key</td><td>@row.Value</td></tr>
+
+        }
+    </table>
+
 }
+
+
+
+    }
